# PBR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
src/climate/: __init__.py  loader.py  surat.yaml  temperature.py
src/config/: __init__.py  loader.py  species_params.yaml
src/models/: parameters.py
src/simulation/: __init__.py  growth.py
src/ui/: app.py  charts.py  export.py  methodology.py  results.py  sidebar.py
tests/: test_climate_config.py  test_climate_growth.py  test_growth.py  test_integration.py  test_light.py  test_parameters.py  test_simulation_integration.py  test_temperature.py
