[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algaegrowth-simulator"
version = "0.1.0"
description = "Microalgal growth simulation for CO2 capture estimation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "scipy>=1.17.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "streamlit>=1.53.0",
    "pandas>=2.0",
    "plotly>=5.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
